--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <p>Fill out the form below. You will receive a confirmation within 24 hours.</p>
 
     <form id="bookingForm" 
-          action="https://formspree.io/f/<FORM_ID>" 
+          action="https://formspree.io/f/mjklgojo" 
           method="POST"
           class="form"
           novalidate>
