--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <p>Fill out the booking form below. You will receive a confirmation reply within 24 hours.</p>
 
     <!-- Replace <FORM_ID> with your Formspree ID (instructions in README) -->
-    <form id="bookingForm" action="https://formspree.io/f/<FORM_ID>" method="POST" class="form" novalidate>
+    <form id="bookingForm" action="https://formspree.io/f/mjklgojo" method="POST" class="form" novalidate>
       <div class="form-row">
         <div class="form-field">
           <label for="name">Full name</label>
